--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -106,12 +106,12 @@
     <p>
         ನಮಸ್ತೇ ರುದ್ರ <b>ಮನ್ಯವ</b> ಉತೋತ ಇಷವೇ ನಮಃ <br>
         <span class="ENG">Namaste Rudra Manyava Utoota Ishave Namah <br></span>
-        ನಮಸ್ತೇ ಅಸ್ತು <b>ಧನ್ವನೆ</b> ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ | | ೧ | <br>
+        ನಮಸ್ತೇ ಅಸ್ತು <b>ಧನ್ವನೆ</b> ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ | <br>
         <span class="ENG">Namaste Astu Dhanvane Karabhyam Te Namo Namah | 1 | <br></span><br>
 
         ಯಾತೇ ರುದ್ರ ಶಿವಾ ತನೂಃ ಶಾಂತಾ ತಸ್ಯೈರ್ ನಮೋ ನಮಃ <br>
         <span class="ENG">YaaTae Rudra Shiva Tanu: Shanta Tasyair Namo Namah <br></span>
-        ನಮೋಸ್ತು ನೀಲಗ್ರೀವಾಯ <b>ಸಹಸ್ರಾಕ್ಷಾಯ</b> ತೇ ನಮಃ | ೨ | <br>
+        <b>ನಮೋಸ್ತು</b> ನೀಲಗ್ರೀವಾಯ <b>ಸಹಸ್ರಾಕ್ಷಾಯ</b> ತೇ ನಮಃ | ೨ | <br>
         <span class="ENG">Namostu Neelagreevaya Sahasraakshaaya Te Namah | 2 |<br></span><br>
 
         <b>ಸಹಸ್ರಪಾಣಯೆ</b> ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ <br>
@@ -136,7 +136,7 @@
 
         ರೋಹಿತಾಯ <b>ಸ್ಥಪತಯೇ</b> ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Rohitaaya Sthapataye Vrikshaanam Pataye Namah <br></span>
-        ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ <b>ಸಾಕ್ಷಾತ್ಕಕ್ಷಾಣಾಂ</b> ಪತಯೇ ನಮಃ | ೭ | <br>
+        ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ ಸಾಕ್ಷಾತ್‌ <b>ಕಕ್ಷಾಣಾಂ</b> ಪತಯೇ ನಮಃ | ೭ | <br>
         <span class="ENG">Namaste Mantrine Saakshaatkakshaanam Pataye Namah | 7 | <br></span><br>
 
         ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ <b>ಸಾಕ್ಷಾತ್ಪರಾತ್ಮನೇ</b> <br>
@@ -161,12 +161,12 @@
 
         ವಂಚತೇ ಪರಿವಂಚತೇ <b>ಸ್ತಾಯೂನಾಂ</b> ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Vanchate Parivanchate Sthaayoonam Pataye Namah <br></span>
-        ನಮೋ <b>ನಿಚೇರವೇ</b> ತುಭ್ಯಮರಣ್ಯಪತಯೇ ನಮಃ | ೧೨ | <br>
+        ನಮೋ <b>ನಿಚೇರವೇ</b> ತುಭ್ಯಂ ಅರಣ್ಯ ಪತಯೇ ನಮಃ | ೧೨ | <br>
         <span class="ENG">Namo Nicherave Tubhyam Aranya Pataye Namah | 12 | <br></span><br>
 
         <b>ಉಷ್ಣೀಷಿಣೇ</b> ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ ಪರಮಾತ್ಮನೇ <br>
         <span class="ENG">Ushneeshine Namastubhyam Namaste Paramaatmane <br></span>
-        <b>ವಿಸ್ಮೃತಾಯ ನಮಸ್ತುಭ್ಯಮಾಸೀನಾಯ</b> ನಮೋ ನಮಃ | ೧೩ | <br>
+        <b>ವಿಸ್ಮೃತಾಯ</b> ನಮಸ್ತುಭ್ಯಂ ಆಸೀನಾಯ ನಮೋ ನಮಃ | ೧೩ | <br>
         <span class="ENG">Vismrutaaya Namastubhyamaaseenaaya Namo Namah | 13 | <br></span><br>
 
         <b>ಶಯನಾಯ</b> ನಮಸ್ತುಭ್ಯಂ <b>ಸುಷುಪ್ತಾಯ</b> ನಮೋ ನಮಃ <br>
@@ -255,52 +255,6 @@
         </span>
     </b>
     <div id="swasti"></div>
-
-
-    ನಮಸ್ತೇ ರುದ್ರ ಮನ್ಯವ ಉತೋತ ಇಷವೇ ನಮಃ
-ನಮಸ್ತೇ ಅಸ್ತು ಧನ್ವನೆ ಕರಾಭ್ಯಾಂ ತೇ ನಮೋ ನಮಃ | ೧ |
-
-ಯಾತೇ ರುದ್ರ ಶಿವಾ ತನೂಃ ಶಾಂತಾ ತಸ್ಯೈರ್ ನಮೋ ನಮಃ
-ನಮೋಸ್ತು ನೀಲಗ್ರೀವಾಯ ಸಹಸ್ರಾಕ್ಷಾಯ ತೇ ನಮಃ | ೨ |
-
-ಸಹಸ್ರಪಾಣಯೆ ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ
-ಕಪರ್ಧಿನೇ ನಮಸ್ತುಭ್ಯಂ ಕಾಲರೂಪಾಯ ತೇ ನಮಃ | ೩ |
-
-ನಮಸ್ತೇ ಚಾಽಽತ್ತಶಸ್ತ್ರಾಯ ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ
-ಹಿರಣ್ಯಪಾಣಯೇ ತುಭ್ಯಂ ಹಿರಣ್ಯಪತಯೇ ನಮಃ | ೪ |
-
-ನಮಸ್ತೇ ವೃಕ್ಷರೂಪಾಯ ಹರಿಕೇಶಾಯ ತೇ ನಮಃ
-ಪಶೂನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಪಥೀನಾಂ ಪತಯೇ ನಮಃ | ೫ |
-
-ಪುಷ್ಟಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕ್ಷೇತ್ರಾಣಾಂ ಪತಯೇ ನಮಃ
-ಆತತಾವಿಸ್ವರೂಪಾಯ ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ |
-
-ರೋಹಿತಾಯ ಸ್ಥಪತಯೇ ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ
-ನಮಸ್ತೇ ಮಂತ್ರಿಣೇ ಸಾಕ್ಷಾತ್ಕಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ | ೭ |
-
-ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ ಸಾಕ್ಷಾತ್ಪರಾತ್ಮನೇ
-‌ಉಛ್ಛೈರ್ ಘೋಷಾಯ ದೇವಾಯ ಪತ್ತೀನಾಂ ಪತಯೇ ನಮಃ | ೮ |
-
-ಸತ್ವಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವನಾನಾಂ ಪತಯೇ ನಮಃ
-ಸಹಮಾನಾಯ ಶಾಂತಾಯ ಶಂಕರಾಯ ನಮೋ ನಮಃ | ೯ |
-
-ಆಧೀನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವ್ಯಾಧೀನಾಂ ಪತಯೇ ನಮಃ
-ಕಕುಭಾಯ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇಽಸ್ತು ನಿಷಂಗಿಣೇ | ೧೦ |
-
-ಸ್ತೇನಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ಕೃತ್ರಿಮಾಯ ನಮೋ ನಮಃ
-ತಸ್ಕರಾಣಾಂ ನಮಸ್ತುಭ್ಯಂ ಪತಯೇ ಪಾಪಹಾರಿಣೇ | ೧೧ |
-
-ವಂಚತೇ ಪರಿವಂಚತೇ ಸ್ತಾಯೂನಾಂ ಪತಯೇ ನಮಃ
-ನಮೋ ನಿಚೇರವೇ ತುಭ್ಯಮರಣ್ಯಪತಯೇ ನಮಃ | ೧೨ |
-
-ಉಷ್ಣೀಷಿಣೇ ನಮಸ್ತುಭ್ಯಂ ನಮಸ್ತೇ ಪರಮಾತ್ಮನೇ
-ವಿಸ್ಮೃತಾಯ ನಮಸ್ತುಭ್ಯಮಾಸೀನಾಯ ನಮೋ ನಮಃ | ೧೩ |
-
-ಶಯನಾಯ ನಮಸ್ತುಭ್ಯಂ ಸುಷುಪ್ತಾಯ ನಮೋ ನಮಃ
-ಪ್ರಬುಧ್ಧಾಯ ನಮಸ್ತುಭ್ಯಂ ಸ್ಥಿತಾಯ ಪರಮಾತ್ಮನೇ | ೧೪ |
-
-ಸಭಾರೂಪಾಯ ತೇ ನಿತ್ಯಂ ಸಭಾಯಾಃ ಪತಯೇ ನಮಃ
-ನಮಃ ಶಿವಾಯ ಸಾಂಬಾಯ ಬ್ರಹ್ಮಣೇ ಸರ್ವಸಾಕ್ಷಿಣೇ | ೧೫ |
 
     <script>
         function loadSection(sectionId, url) {
