--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -68,7 +68,7 @@
     <p>
         Place right hand on the lingam, close your eyes while doing dyaanam.
     </p>
-
+    
     <p>
         ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ <br>
         <span class="ENG">
@@ -141,7 +141,7 @@
 
         ಓಷಧೀನಾಂ ಚ ಪತಯೇ ನಮಃ <b>ಸಾಕ್ಷಾತ್ಪರಾತ್ಮನೇ</b> <br>
         <span class="ENG">Oushadheenam Cha Pataye Namah SaakshaatParaatmane <br></span>
-        ‌ಉಛ್ಛೈರ್ ಘೋಷಾಯ ದೇವಾಯ ಪತ್ತೀನಾಂ ಪತಯೇ ನಮಃ | ೮ | <br>
+        ‌ಉಛ್ಛೈರ್ ಘೋಷಾಯ ದೇವಾಯ <b>ಪತ್ತೀನಾಂ</b> ಪತಯೇ ನಮಃ | ೮ | <br>
         <span class="ENG">Ucchair Ghoshaaya Devaaya Patteenam Pataye Namah | 8 | <br></span><br>
 
         ಸತ್ವಾನಾಂ ಪತಯೇ ತುಭ್ಯಂ ವನಾನಾಂ ಪತಯೇ ನಮಃ <br>
