--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -206,6 +206,8 @@
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ದೀಪಂ ದರ್ಶಯಾಮಿ <br>
         <span class="ENG">Sree umamahaeSvaraabhyaaM nama: deepaM darSayaami <br></span>
+        ಧೂಪದೀಪ ನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
+        <span class="ENG">DhoopaDeepa nantaram achama-niyam samarpayami <br></span>
     </p>
 
 
@@ -244,6 +246,11 @@
     <div id="chaamaram"></div>
     <div id="puja-end-prarthana"></div>
     <b>
+        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ ಸದಾಶಿವಾ<br>
+        <span class="ENG">
+            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ sadaaSiva<br><br>
+        </span>
+
         ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ ಪೂಜಯಾ ಚ ಭಗವಾನ್ ಸರ್ವಾತ್ಮಕಃ<br>
         <span class="ENG">
             AnayA yathAshakti pUjayA cha bhagavān sarvātmakaḥ<br><br>
