--- a/general/swasti.html
+++ b/general/swasti.html
@@ -2,6 +2,10 @@
 <h2>ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
 
 <p>
+    This is the time to do your prayers and make your requests.
+</p>
+
+<p>
     ಸ್ವಸ್ತಿ ಪ್ರಜಾಭ್ಯಃ ಪರಿಪಾಲಯಂತಾಂ<br>
     <span class="ENG">
         swasti prajābhyaḥ paripālayantām<br>
