--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -180,6 +180,12 @@
         <span class="ENG">Namah Shivaaya Saambaaya Brahmane Sarvasaakshine | 15 | <br></span><br>
     </p>
 
+    <h2>Stotram</h2>
+
+    <p>
+        <iframe width="500" height="100" src="https://www.youtube.com/embed/v6b0R75QzAw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+
     <h2>ಧೂಪಂ<span class="ENG">Dhoopam</span></h2>
 
     <p>
