--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
         <li> <a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a> </li>
         <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
-        <li> <a href="stotram/shiva-panchakshari-stotram.html">Shiva Panchakshari Stotram</a> </li>
+        <li> <a href="stotram/shiva-panchakshara-stotram.html">Shiva Panchakshara Stotram</a> </li>
         <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
         <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
         <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
