--- a/stotram/shiva-panchakshara-stotram.html
+++ b/stotram/shiva-panchakshara-stotram.html
@@ -33,6 +33,10 @@
     <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <p>
+        <iframe width="560" height="100" src="https://www.youtube.com/embed/tFv_ZVYjVHQ?si=u1b4efHMxvgcKCm6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+
+    <p>
         ನಾಗೇಂದ್ರಹಾರಾಯ ತ್ರಿಲೋಚನಾಯ ಭಸ್ಮಾಂಗರಾಗಾಯ ಮಹೇಶ್ವರಾಯ | <br>
         ನಿತ್ಯಾಯ ಶುದ್ಧಾಯ ದಿಗಂಬರಾಯ ತಸ್ಮೈ "ನ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೧ || <br>
     </p>
