--- a/stotram/shiva-panchakshara-stotram.html
+++ b/stotram/shiva-panchakshara-stotram.html
@@ -33,32 +33,65 @@
     <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <p>
-        <iframe width="560" height="100" src="https://www.youtube.com/embed/tFv_ZVYjVHQ?si=u1b4efHMxvgcKCm6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="100" src="https://www.youtube.com/embed/tFv_ZVYjVHQ?si=u1b4efHMxvgcKCm6"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </p>
 
     <p>
         ನಾಗೇಂದ್ರಹಾರಾಯ ತ್ರಿಲೋಚನಾಯ ಭಸ್ಮಾಂಗರಾಗಾಯ ಮಹೇಶ್ವರಾಯ | <br>
+        <span class="ENG">
+            nagendraharaya trilochanaya bhasmangaragaya mahesvaraya | <br>
+        </span>
         ನಿತ್ಯಾಯ ಶುದ್ಧಾಯ ದಿಗಂಬರಾಯ ತಸ್ಮೈ "ನ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೧ || <br>
+        <span class="ENG">
+            nityaya suddhaya digambaraya tasmai na karaya namah shivaya || 1 ||<br>
+        </span>
     </p>
 
     <p>
-        ಮಂದಾಕಿನೀಸಲಿಲಚಂದನಚರ್ಚಿತಾಯ ನಂದೀಶ್ವರಪ್ರಮಥನಾಥಮಹೇಶ್ವರಾಯ | <br>
-        ಮಂದಾರಪುಷ್ಪಬಹುಪುಷ್ಪಸುಪೂಜಿತಾಯ ತಸ್ಮೈ "ಮ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೨ || <br>
+        ಮಂದಾಕಿನೀ-ಸಲಿಲ-ಚಂದನ-ಚರ್ಚಿತಾಯ ನಂದೀಶ್ವರ-ಪ್ರಮಥನಾಥ-ಮಹೇಶ್ವರಾಯ | <br>
+        <span class="ENG">
+            mandakini salila chandana charchitaya nandeeswara pramathanatha mahesvaraya | <br>
+        </span>
+        ಮಂದಾರ-ಪುಷ್ಪ-ಬಹುಪುಷ್ಪ-ಸುಪೂಜಿತಾಯ ತಸ್ಮೈ "ಮ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೨ || <br>
+        <span class="ENG">
+            mandara pushpa bahupushpa supujitaya tasmai ma karaya namah shivaya || 2 ||<br>
+        </span>
     </p>
 
     <p>
-        ಶಿವಾಯ ಗೌರೀವದನಾಬ್ಜವೃಂದ-ಸೂರ್ಯಾಯ ದಕ್ಷಾಧ್ವರನಾಶಕಾಯ | <br>
-        ಶ್ರೀನೀಲಕಂಠಾಯ ವೃಷಧ್ವಜಾಯ ತಸ್ಮೈ "ಶಿ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೩ || <br>
+        ಶಿವಾಯ ಗೌರೀ-ವದನಾಬ್ಜ-ವೃಂದ ಸೂರ್ಯಾಯ ದಕ್ಷಾಧ್ವರ ನಾಶಕಾಯ | <br>
+        <span class="ENG">
+            shivaya gauri vadanabja brnda suryaya dakshadhvara nashakaya | <br>
+        </span>
+        ಶ್ರೀನೀಲಕಂಠಾಯ-ವೃಷಧ್ವಜಾಯ ತಸ್ಮೈ "ಶಿ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೩ || <br>
+        <span class="ENG">
+            sri nilakantaya vrshadhvajaya tasmai shi karaya namah shivaya || 2 ||<br>
+        </span>
     </p>
 
     <p>
-        ವಶಿಷ್ಠಕುಂಭೋದ್ಭವಗೌತಮಾರ್ಯ ಮುನೀಂದ್ರದೇವಾರ್ಚಿತಶೇಖರಾಯ | <br>
-        ಚಂದ್ರಾರ್ಕವೈಶ್ವಾನರಲೋಚನಾಯ ತಸ್ಮೈ "ವ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೪ || <br>
+        ವಶಿಷ್ಠ-ಕುಂಭೋದ್ಭವ-ಗೌತಮಾರ್ಯ ಮುನೀಂದ್ರ-ದೇವಾರ್ಚಿತ-ಶೇಖರಾಯ | <br>
+        <span class="ENG">
+            vashista kumbhodbhava gautamaarya munindra devarchita shekharaya | <br>
+        </span>
+        ಚಂದ್ರಾರ್ಕ-ವೈಶ್ವಾನರ-ಲೋಚನಾಯ ತಸ್ಮೈ "ವ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೪ || <br>
+        <span class="ENG">
+            chandrarka vaishvanara lochanaya tasmai va karaya namah shivaya || 3 || <br>
+        </span>
     </p>
 
     <p>
-        ಯಜ್ಞಸ್ವರೂಪಾಯ ಜಟಾಧರಾಯ ಪಿನಾಕಹಸ್ತಾಯ ಸನಾತನಾಯ | <br>
+        ಯಜ್ಞ-ಸ್ವರೂಪಾಯ ಜಟಾಧರಾಯ ಪಿನಾಕ-ಹಸ್ತಾಯ ಸನಾತನಾಯ | <br>
+        <span class="ENG">
+            yagna svarupaya jatadharaya pinaka hastaya sanatanaya | <br>
+        </span>
         ದಿವ್ಯಾಯ ದೇವಾಯ ದಿಗಂಬರಾಯ ತಸ್ಮೈ "ಯ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೫ || <br>
+        <span class="ENG">
+            divyaya devaya digambaraya tasmai ya karaya namah shivaya<br>
+        </span>
     </p>
 
     <p>
