--- a/stotram/soundarya-lahari.html
+++ b/stotram/soundarya-lahari.html
@@ -78,7 +78,7 @@
         </span>
     </p>
 
-    <h3>17 → 8 ರ್ವಾಗ್ದೇವತ <span class="ENG">(8 goddesses of speech)</span></h3>
+    <h3>17 → 8 ವಾಗ್ದೇವತ <span class="ENG">(8 goddesses of speech)</span></h3>
     <p>
         ಸವಿತ್ರೀಭಿರ್ವಾಚಾಂ ಶಶಿಮಣಿ ಶಿಲಾ-ಭಂಗ ರುಚಿಭಿಃ<br>
         <span class="ENG">
