--- a/index.html
+++ b/index.html
@@ -6,42 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puja Vidhi</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Welcome to Puja Vidhi</h1>
-    <h2>Puja Procedures</h2>
-    <ol>
-        <li> <a href="puja/ganapati-puja.html">Ganapati Puja</a> </li>
-        <li> <a href="puja/hanumaan-puja.html">Hanumaan Puja</a> </li>
-        <li> <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati.html</a> </li>
-        <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
-        <li> <a href="puja/shiva-abhishekam.html">Shiva Abhishekam</a> </li>
-        <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
-        <li> <a href="puja/venkateswara-puja.html">Venkateswara Puja</a> </li>
-        <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
-    </ol>
+    <main>
+        <section class="tiles-container">
+            <div class="tile">
+                <h2>Ganapati</h2>
+                <ol>
+                    <li><a href="puja/ganapati-puja.html">Ganapati Puja</a></li>
+                    <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
+                </ol>
+            </div>
 
-    <h2>Stotrams & Mantrams</h2>
-    <ol>
-        <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
-        <li> <a href="stotram/maha-mrityunjaya-mantra.html">Maha Mrityunjaya Mantra</a> </li>
-        <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
-        <li> <a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a> </li>
-        <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham.html</a> </li>
-        <li> <a href="stotram/shiva-panchakshara-stotram.html">Shiva Panchakshara Stotram</a> </li>
-        <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari</a> </li>
-        <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
-        <li> <a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a> </li>
-        <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi</a> </li>
-        <ol>
-            <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
-            <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama Stotram</a>
-            </li>
-            <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali.html</a> </li>
-            <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram.html</a> </li>
-        </ol>
-    </ol>
+            <div class="tile">
+                <h2>Venkateswara</h2>
+                <ol>
+                    <li><a href="puja/venkateswara-puja.html">Venkateswara Puja</a></li>
+                    <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
+                </ol>
+            </div>
+
+            <div class="tile">
+                <h2>Lakshmi</h2>
+                <ol>
+                    <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
+                    <li> <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati</a> </li>
+                    <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
+                    <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
+                    <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
+                            Stotram</a> </li>
+                    <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali</a>
+                    </li>
+                    <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
+                <h2>Hanuman</h2>
+                <ol>
+                    <li> <a href="puja/hanumaan-puja.html">Hanumaan Puja</a> </li>
+                    <li> <a href="stotram/ramadootha-anjaneya-stotram.html">Ramadootha Anjaneya Stotram</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
+                <h2>Shiva</h2>
+                <ol>
+                    <li> <a href="puja/shiva-abhishekam.html">Shiva Abhishekam</a> </li>
+                    <li> <a href="stotram/shiva-panchakshara-stotram.html">Shiva Panchakshara Stotram</a> </li>
+                    <li> <a href="stotram/maha-mrityunjaya-mantra.html">Maha Mrityunjaya Mantra</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
+                <h2>Saraswati</h2>
+                <ol>
+                    <li> <a href="stotram/saraswati-kavacham.html">Saraswati Kavacham</a> </li>
+                    <li> <a href="stotram/soundarya-lahari.html">Soundarya Lahari (15, 16 & 17)</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
+                <h2>Uncategorised</h2>
+                <ol>
+                    <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
+                    <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
+                    <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
+                </ol>
+            </div>
+
+        </section>
+    </main>
 
     <hr>
     <ol>
