--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
                 <h2>Lakshmi</h2>
                 <ol>
                     <li> <a href="puja/lakshmi-puja.html">Lakshmi Puja</a> </li>
-                    <li> <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati</a> </li>
+                    <li>
+                        <a href="puja/lakshmi-chaturvimsati.html">Lakshmi Chaturvimsati</a><br>
+                        (
+                            <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Naamavali</a>,
+                            <a href="stotram/lakshmi-chaturvimsati-stotram.html">Stotram</a>
+                        )
+                    </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
                     <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
                     <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
                             Stotram</a> </li>
-                    <li> <a href="stotram/lakshmi-chaturvimsati-naamavali.html">Lakshmi Chaturvimsati Naamavali</a>
-                    </li>
-                    <li> <a href="stotram/lakshmi-chaturvimsati-stotram.html">Lakshmi Chaturvimsati Stotram</a> </li>
                 </ol>
             </div>
 
