--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <div class="tile">
                 <h2>Uncategorised</h2>
                 <ol>
+                    <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
                     <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
