--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -141,7 +141,7 @@
 
         ಧೂಪದೀಪ ನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
         <span class="ENG">
-            DhoopaDeepa nantaram achama-niyam samarpayami<br>
+            DhoopaDeepa nantaram aachamaneeyam samarpayaami<br>
         </span>
     </p>
 
