--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -122,7 +122,7 @@
         <br>
 
         ಧೂಪದೀಪ ನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">DhoopaDeepa nantaram achama-niyam samarpayami</span>
+        <span class="ENG">DhoopaDeepa nantaram aachamaneeyam samarpayaami</span>
     </p>
 
     <h2>
