--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -92,7 +92,7 @@
         </span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧ್ಯಾನ ಆವಾಹನಾದಿ <br>
-        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: dhyaana aavaahanaadi <br></span>
+        <span class="ENG">shree umaamaheshvaraabhyaam namah dhyaana aavaahanaadi <br></span>
         ಸಮಸ್ತ ಉಪಚಾರಾನ್ ಮನಸಾ ಸಮರ್ಪಯಾಮಿ<br>
         <span class="ENG">Samastha upachaaraan manasaa samarpayaami</span>
     </p>
@@ -180,40 +180,36 @@
         <span class="ENG">Namah Shivaaya Saambaaya Brahmane Sarvasaakshine | 15 | <br></span><br>
     </p>
 
-    <h2>Stotram</h2>
-
-    <p>
-        <iframe width="500" height="100" src="https://www.youtube.com/embed/v6b0R75QzAw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </p>
+    <div id="panchakshara-stotram"></div>
 
     <h2>ಧೂಪಂ<span class="ENG">Dhoopam</span></h2>
 
     <p>
         ವನಸ್ಪತಿ ರಸೈರ್ ದಿವ್ಯೈಃ ನಾನಾ ಗಂಧೈಃ ಸುಸಂಯುತಂ <br>
-        <span class="ENG">vanaspati rasair divyai: naanaa gaMdhai: susaMyutaM <br></span>
+        <span class="ENG">vanaspati rasair divyaih naanaa gandhaih susamyutam <br></span>
         ಆಘ್ರೇಯ ಸ್ಸರ್ವ ದೇವಾನಾಂ ಧೂಪೋಯಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ <br>
-        <span class="ENG">aaghraeya ssarva daevaanaaM dhoopOyaM pratigRhyataaM <br></span>
+        <span class="ENG">aaghreyah sarva devaanaam dhoopoyam pratigrihyataam <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧೂಪಂ ಆಘ್ರಾಪಯಾಮಿ <br>
-        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: dhoopaM aaghraapayaami <br></span>
+        <span class="ENG">shree umaamaheshvaraabhyaam namah dhoopam aaghraapayaami <br></span>
     </p>
 
     <h2>ದೀಪಂ<span class="ENG">Deepam</span></h2>
 
     <p>
         ಸಾಜ್ಯಂ ತ್ರಿವರ್ತಿ ಸಂಯುಕ್ತಂ ವಹ್ನಿನಾ ಯೋಜಿತಂ ಮಯಾ <br>
-        <span class="ENG">saajyaM trivarti saMyuktaM vahninaa yOjitaM mayaa <br></span>
+        <span class="ENG">saajyam trivarti samyuktam vahninaa yojitam mayaa <br></span>
         ಗೃಹಾಣ ಮಂಗಳಂ ದೀಪಂ ತ್ರೈಲೋಕ್ಯ ತಿಮಿರಾಪಹಂ <br>
-        <span class="ENG">gRhaaNa maMgaLaM deepaM trailOkya timiraapahaM <br></span>
+        <span class="ENG">grihaana mangalam deepam trailokya timiraapaham <br></span>
         ಭಕ್ತ್ಯಾ ದೀಪಂ ಪ್ರಯಚ್ಛಾಮಿ ದೇವಾಯ ಪರಮಾತ್ಮನೇ <br>
-        <span class="ENG">bhaktyaa deepaM prayachChaami daevaaya paramaatmanae <br></span>
+        <span class="ENG">bhaktyaa deepam prayacchaami devaaya paramaatmane <br></span>
         ತ್ರಾಹಿಮಾಂ ನರಕಾದ್ಘೋರಾತ್ ದಿವ್ಯಜ್ಯೋತಿರ್ನಮೋಸ್ತುತೆ <br>
-        <span class="ENG">traahimaaM narakaadghOraat divyajyOtirnamOstutae <br></span>
+        <span class="ENG">traahimaam narakaad-ghoraat divyajyotir-namostute <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ದೀಪಂ ದರ್ಶಯಾಮಿ <br>
-        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: deepaM darSayaami <br></span>
+        <span class="ENG">shree umaamaheshvaraabhyaam namah deepam darshayaami <br></span>
         ಧೂಪದೀಪ ನಂತರಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
-        <span class="ENG">DhoopaDeepa nantaram achama-niyam samarpayami <br></span>
+        <span class="ENG">DhoopaDeepa nantaram aachamaneeyam samarpayaami <br></span>
     </p>
 
 
@@ -221,12 +217,12 @@
 
     <p>
         ನೈವೇದ್ಯಂ ಗೃಹ್ಯತಾಂ ದೇವ ಭಕ್ತಿಂ ಮೇ ಹ್ಯಚಲಾಂ ಕುರು <br>
-        <span class="ENG">naivaedyaM gRhyataaM daeva bhaktiM mae hyachalaaM kuru <br></span>
+        <span class="ENG">naivedyam grihyataam deva bhaktim me hyachalaam kuru <br></span>
         ಶಿವೇಪ್ಸಿತಂ ವರಂ ದೇಹಿ ಪರತ್ರ ಚ ಪರಾಂ ಗತಿಂ <br>
-        <span class="ENG">SivaepsitaM varaM daehi paratra cha paraaM gatim <br></span>
+        <span class="ENG">shivepsitam varam dehi paratra cha paraam gatim <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ <br>
-        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: naivaedyaM samarpayaami <br></span>
+        <span class="ENG">shree umaamaheshvaraabhyaam namah naivedyam samarpayaami <br></span>
     </p>
 
     <h2>ನೀರಾಜನಂ<span class="ENG">Neeraajanam</span></h2>
@@ -234,17 +230,17 @@
     <p>
 
         ಉಮಾಕಾಂತಾಯ ಕಾಂತಾಯ ಕಾಮಿತಾರ್ಥ ಪ್ರದಾಯಿನೇ <br>
-        <span class="ENG">umaakaaMtaaya kaaMtaaya kaamitaartha pradaayinae <br></span>
+        <span class="ENG">umaakaantaaya kaantaaya kaamitaartha pradaayine <br></span>
         ಶ್ರೀಗಿರೀಶಾಯ ದೇವಾಯ ಮಲ್ಲಿನಾಥಾಯ ಮಂಗಳಂ <br>
-        <span class="ENG">SreegireeSaaya daevaaya mallinaathaaya maMgaLaM <br></span>
+        <span class="ENG">sree-gireeshaaya devaaya mallinaathaaya mangalam <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಕರ್ಪೂರ ನೀರಾಜನಂ ದರ್ಶಯಾಮಿ <br>
-        <span class="ENG">Sree umamahaeSvaraabhyaaM nama: karpoora neeraajanaM darSayaami <br></span>
+        <span class="ENG">shree umaamaheshvaraabhyaam namah karpoora neeraajanam darshayaami <br></span>
         ನೀರಾಜನಾನಂತರಂ ಶುದ್ಧಾಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ <br>
-        <span class="ENG">neeraajanaanaMtaraM SuddhaachamaneeyaM samarpayaami <br></span>
+        <span class="ENG">neeraajanaantaram shuddhaachamaneeyam samarpayaami <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಸುವರ್ಣ ದಿವ್ಯ ಮಂತ್ರಪುಷ್ಪಂ ಸಮರ್ಪಯಾಮಿ <br>
-        <span class="ENG"> Sree umamahaeSvaraabhyaaM nama: suvarNa divya maMtrapushpaM samarpayaami <br> </span>
+        <span class="ENG"> shree umaamaheshvaraabhyaam namah suvarNa divya mantrapushpam samarpayaami <br> </span>
         ಆತ್ಮ ಪ್ರದಕ್ಷಿಣ ನಮಸ್ಕಾರಾನ್ ಸಮರ್ಪಯಾಮಿ <br>
         <span class="ENG">aatma pradakshiNa namaskaaraan samarpayaami<br></span>
     </p>
@@ -285,6 +281,7 @@
         loadSection('bhootoochchaatana', '../general/bhootoochchaatana.html');
         loadSection('pranayama', '../general/pranayama.html');
         loadSection('sankalpam', '../general/sankalpam.html');
+        loadSection('panchakshara-stotram', '../stotram/shiva-panchakshara-stotram.html');
         loadSection('chaamaram', '../general/chaamaram.html');
         loadSection('puja-end-prarthana', '../general/puja-end-prarthana.html');
         loadSection('swasti', '../general/swasti.html');
