--- a/stotram/shiva-panchakshara-stotram.html
+++ b/stotram/shiva-panchakshara-stotram.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <h1>ಶಿವ ಪಂಚಾಕ್ಷರ ಸ್ತೋತ್ರಂ <span class="ENG">(Shiva Panchakshara Stotram)</span></h1>
+    <h2>ಶಿವ ಪಂಚಾಕ್ಷರ ಸ್ತೋತ್ರಂ <span class="ENG">(Shiva Panchakshara Stotram)</span></h2>
 
     <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
@@ -84,9 +84,9 @@
     </p>
 
     <p>
-        ಯಜ್ಞ-ಸ್ವರೂಪಾಯ ಜಟಾಧರಾಯ ಪಿನಾಕ-ಹಸ್ತಾಯ ಸನಾತನಾಯ | <br>
+        ಯಕ್ಷಸ್ವರೂಪಾಯ ಜಟಾಧರಾಯ ಪಿನಾಕ-ಹಸ್ತಾಯ ಸನಾತನಾಯ | <br>
         <span class="ENG">
-            yagna svarupaya jatadharaya pinaka hastaya sanatanaya | <br>
+            yaksasvarupaya jatadharaya pinaka hastaya sanatanaya | <br>
         </span>
         ದಿವ್ಯಾಯ ದೇವಾಯ ದಿಗಂಬರಾಯ ತಸ್ಮೈ "ಯ" ಕಾರಾಯ ನಮಃ ಶಿವಾಯ || ೫ || <br>
         <span class="ENG">
