--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -60,14 +60,11 @@
 
     <h2>ಧ್ಯಾನಂ<span class="ENG">Dhyaanam</span></h2>
 
-    <iframe width="500" height="100" src="https://www.youtube.com/embed/LeLLzp_YXyI?si=PoPwJYIulnAITWeM&amp;start=8"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
     <p>
         Place right hand on the lingam, close your eyes while doing dyaanam.
     </p>
+
+    <audio controls="controls" src="../audio/vande-shambhum-umapathim.mp3" autoplay></audio>
     
     <p>
         ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ <br>
