save veerabhadra dhyaana slokam

--- a/puja/hanumaan-puja.html
+++ b/puja/hanumaan-puja.html
@@ -34,6 +34,7 @@
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
+    <div id="kuladevata-prarthana"></div>
     <div id="deepaaradhana"></div>
     <div id="achamanam"></div>
     <div id="bhootoochchaatana"></div>
@@ -187,6 +188,7 @@
         }
         loadSection('shuddikarana-mantra', '../general/shuddikarana-mantra.html');
         loadSection('ganapati-prarthana', '../general/ganapati-prarthana.html');
+        loadSection('kuladevata-prarthana', '../general/kuladevata-veerabhadra.html');
         loadSection('deepaaradhana', '../general/deepaaradhana.html');
         loadSection('achamanam', '../general/achamanam.html');
         loadSection('bhootoochchaatana', '../general/bhootoochchaatana.html');
