veerabhadra meaning added.

--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -65,7 +65,7 @@
         Place right hand on the lingam, close your eyes while doing dyaanam.
     </p>
 
-    <audio controls="controls" src="../audio/vande-shambhum-umapathim.mp3" autoplay></audio>
+    <audio controls="controls" src="../audio/vande-shambhum-umapathim.mp3"></audio>
     
     <p>
         ವಂದೇ ಶಂಭುಮುಮಾಪತಿಂ ಸುರಗುರುಂ ವಂದೇ ಜಗತ್ಕಾರಣಂ <br>
