saving surya namaskar

--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
             </div>
 
             <div class="tile">
+                <h2>Surya Bhagavaan</h2>
+                <ol>
+                    <li> <a href="stotram/surya-namaskara-mantra.html">Surya Namaskaram</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
                 <h2>Uncategorised</h2>
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
