--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
+                    <li> <a href="stotram/trading.html">Trading Mantras</a> </li>
                 </ol>
             </div>
 
