--- a/stotram/shiva-panchakshara-stotram.html
+++ b/stotram/shiva-panchakshara-stotram.html
@@ -40,6 +40,13 @@
     </p>
 
     <p>
+        <iframe width="560" height="100" src="https://www.youtube.com/embed/Fd1e_Q2ITLg?si=cggM6XJuRA8f6AG2"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+
+    <p>
         ನಾಗೇಂದ್ರಹಾರಾಯ ತ್ರಿಲೋಚನಾಯ ಭಸ್ಮಾಂಗರಾಗಾಯ ಮಹೇಶ್ವರಾಯ | <br>
         <span class="ENG">
             nagendraharaya trilochanaya bhasmangaragaya mahesvaraya | <br>
