--- a/general/kuladevata-prarthana.html
+++ b/general/kuladevata-prarthana.html
@@ -15,7 +15,7 @@
         fiery & powerful (like blazing fire), dark-blue bodied and adorned with six-arms <br>
     </span>
 
-    ಪಾನಪಾತ್ರಾಸಿ ಶೂಲೇಕ್ಷು ಚಾಪ ಖಡ್ಗಧರಂ ಶುಭಂ <br>
+    <b>ಪಾನ-ಪಾತ್ರಾಸಿ</b> ಶೂಲೇಕ್ಷು ಚಾಪ ಖಡ್ಗಧರಂ ಶುಭಂ <br>
     <span class="ENG">
         paanapaatraasi shoolaekshu chaapa khadgadharam shubham <br>
         holds drinking vessel, trident, arrow, bow, sword and auspicious varada hasta <br>
