--- a/stotram/daily-mantras.html
+++ b/stotram/daily-mantras.html
@@ -32,42 +32,41 @@
 
     <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
-    <h2>ಪ್ರಭಾತ ಶ್ಲೋಕಃ (Prabhaata sloka)</h2>
+    <h2>ಪ್ರಭಾತ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Sloka)</span></h2>
 
     <p>
-        karaagre vasate lakshmee <br>
-        Kara madhye sarasvati | <br>
-        karamuuletu govinda <br>
-        prabhaatae kara-darshanam || <br>
         ಕರಾಗ್ರೇ ವಸತೇ ಲಕ್ಷ್ಮೀಃ <br>
+        <span class="ENG">karaagre vasate lakshmi <br></span>
         ಕರಮಧ್ಯೇ ಸರಸ್ವತೀ | <br>
+        <span class="ENG">Kara madhye saraswati | <br></span>
         ಕರಮೂಲೇ ತು ಗೋವಿಂದಃ <br>
-        ಪ್ರಭಾತೇ ಕರದರ್​ಶನಮ್ || <br>
+        <span class="ENG">karamuuletu govinda <br></span>
+        ಪಪ್ರಭಾತೇ ಕರದರ್ಶನಮ್ || <br>
+        <span class="ENG">prabhaatae kara-darshanam || <br></span>
     </p>
 
-    <h2>ಪ್ರಭಾತ ಭೂಮಿ ಶ್ಲೋಕಃ (Prabhaata bhoomi sloka)</h2>
+    <h2>ಪ್ರಭಾತ ಭೂಮಿ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Bhoomi Sloka)</span></h2>
     <p>
-        samudra vasane devee <br>
-        parvata stana mandale | <br>
-        vishnu patnee namastubhyam <br>
-        paada sparsham kshama-svame || <br>
         ಸಮುದ್ರ ವಸನೇ ದೇವೀ <br>
+        <span class="ENG">samudra vasane devee <br></span>
         ಪರ್ವತ ಸ್ತನ ಮಂಡಲೇ | <br>
+        <span class="ENG">parvata stana mandale | <br></span>
         ವಿಷ್ಣುಪತ್ನಿ ನಮಸ್ತುಭ್ಯಂ <br>
-        ಪಾದಸ್ಪರ್​ಶಂ ಕ್ಷಮಸ್ವಮೇ || <br>
+        <span class="ENG">vishnu patnee namastubhyam <br></span>
+        ಪಾದಸ್ಪರ್ಶಂ ಕ್ಷಮಸ್ವಮೇ || <br>
+        <span class="ENG">paada sparsham kshama-swa-mae || <br></span>
     </p>
 
-    <h2>ಸ್ನಾನ ಶ್ಲೋಕಃ (snaana sloka)</h2>
-
+    <h2>ಸ್ನಾನ ಶ್ಲೋಕಃ <span class="ENG">(Snaana Sloka)</span></h2>
     <p>
-        gangae cha yamunae chaiva <br>
-        godaavari sarasvatee | <br>
-        narmadae sindhu kaaveree <br>
-        jalaesmin sannidhim kuru || <br>
         ಗಂಗೇ ಚ ಯಮುನೇ ಚೈವ <br>
-        ಗೋದಾವರೀ ಸರಸ್ವತೀ | <br>
-        ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರೀ <br>
+        <span class="ENG">gangae cha yamunae chaiva <br></span>
+        ಗೋದಾವರಿ ಸರಸ್ವತಿ | <br>
+        <span class="ENG">godavari saraswati | <br></span>
+        ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರಿ <br>
+        <span class="ENG">narmadae sindhu kaveri <br></span>
         ಜಲೇಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು || <br>
+        <span class="ENG">jalaesmin sannidhim kuru || <br></span>
     </p>
 
 </body>
