--- a/puja/hanumaan-puja.html
+++ b/puja/hanumaan-puja.html
@@ -44,18 +44,19 @@
         ಸಂಕಲ್ಪಂ <span class="ENG">(Sankalpam)</span>
     </h2>
     <b>
-        ಶ್ರೀ ಪರಮೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
+        ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ ಪರಮೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
         <span class="ENG">
-            Sree paramaeSvara preetyardhaM
+            mama upaatta samasta duritakshaya dvaaraa sree paramaeSvara preetyardhaM
         </span>
     </b>
 
     <div id="sankalpam"></div>
 
     <b>
-        ಶ್ರೀ ಸೀತಾರಾಮಚಂದ್ರ ದೇವತಾ ಪ್ರೀತ್ಯರ್ಥಂ ಶ್ರೀ ಆಂಜನೇಯ ದೇವತಾಂ<br>
+        ಶ್ರೀ ಸೀತಾರಾಮಚಂದ್ರ ದೇವತಾ ಪ್ರೀತ್ಯರ್ಥಂ  <br>&emsp;ಶ್ರೀ ಆಂಜನೇಯ ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
-            śrī sītārāmacandra devatā prītyarthaṃ śrī āñjaneya devatāṃ
+            śrī sītārāmacandra devatā prītyarthaṃ <br>&emsp;
+            śrī āñjaneya daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
 
