--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -44,18 +44,18 @@
         ಸಂಕಲ್ಪಂ <span class="ENG">(Sankalpam)</span>
     </h2>
     <b>
-        ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ಪ್ರೀತ್ಯರ್ಥಂ<br>
+        ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ಪ್ರೀತ್ಯರ್ಥಂ<br>
         <span class="ENG">
-            Sree mahālakṣmī preetyardhaM
+            mama upaatta samasta duritakshaya dvaaraa sree mahālakṣmī preetyardhaM
         </span>
     </b>
 
     <div id="sankalpam"></div>
 
     <b>
-        ಶ್ರೀ ವರ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವತಾಂ<br>
+        ಶ್ರೀ ವರ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
-            śrī vara mahālakṣmī daevataaM
+            śrī vara mahālakṣmī daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
 
