--- a/puja/venkateswara-puja.html
+++ b/puja/venkateswara-puja.html
@@ -44,9 +44,9 @@
         ಸಂಕಲ್ಪಂ <span class="ENG">(Sankalpam)</span>
     </h2>
     <b>
-        ಶ್ರೀ ವೆಂಕಟೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
+        ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ ವೆಂಕಟೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
         <span class="ENG">
-            Sree Venkateshwara preetyardhaM
+            mama upaatta samasta duritakshaya dvaaraa sree Venkateshwara preetyardhaM
         </span>
     </b>
 
@@ -54,10 +54,10 @@
 
     <b>
         ಅಲಮೇಲುಮಂಗಾ ಪದ್ಮಾವತೀ ಸಮೇತ<br>&emsp;
-        ಶ್ರೀ ವೆಂಕಟೇಶ್ವರ ದೇವತಾಂ<br>
+        ಶ್ರೀ ವೆಂಕಟೇಶ್ವರ ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
             Alamelumanga Padmavati sameta<br>&emsp;
-            Shree Venkateshwara devataam
+            Shree Venkateshwara daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
 
