--- a/puja/TEMPLATE-PUJA.html
+++ b/puja/TEMPLATE-PUJA.html
@@ -44,18 +44,18 @@
         ಸಂಕಲ್ಪಂ <span class="ENG">(Sankalpam)</span>
     </h2>
     <b>
-        ಶ್ರೀ TEMPLATE-DEVATA ಪ್ರೀತ್ಯರ್ಥಂ<br>
+        ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ TEMPLATE-DEVATA ಪ್ರೀತ್ಯರ್ಥಂ<br>
         <span class="ENG">
-            Sree TEMPLATE-DEVATA preetyardhaM
+            mama upaatta samasta duritakshaya dvaaraa sree TEMPLATE-DEVATA preetyardhaM
         </span>
     </b>
 
     <div id="sankalpam"></div>
 
     <b>
-        ಶ್ರೀ TEMPLATE-DEVATA ದೇವತಾಂ<br>
+        ಶ್ರೀ TEMPLATE-DEVATA ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
-            Sree TEMPLATE-DEVATA daevataaM
+            Sree TEMPLATE-DEVATA daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
 
