--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -44,18 +44,18 @@
         ಸಂಕಲ್ಪಂ <span class="ENG">(Sankalpam)</span>
     </h2>
     <b>
-        ಶ್ರೀ ಪರಮೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
+        ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ ಪರಮೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ<br>
         <span class="ENG">
-            Sree paramaeSvara preetyardhaM
+            mama upaatta samasta duritakshaya dvaaraa sree paramaeSvara preetyardhaM
         </span>
     </b>
 
     <div id="sankalpam"></div>
     
     <b>
-        ಶ್ರೀ ವಿನಾಯಕ ದೇವತಾಂ<br>
+        ಶ್ರೀ ವಿನಾಯಕ ದೇವತಾಂ ಉದ್ದಿಶ್ಯ ಯಾವಚ್ಛಕ್ತಿ ಪೂಜಾಂ ಕರಿಷ್ಯೇ<br>
         <span class="ENG">
-            Sree vinaayaka daevataaM
+            Sree vinaayaka daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
     
