Fixed soundarya lahari

--- a/stotram/soundarya-lahari.html
+++ b/stotram/soundarya-lahari.html
@@ -39,17 +39,17 @@
             sharaj-jyotsna-shuddham shashiyuta-jatajuta-makutam<br>
         </span>
 
-        ವರತ್ರಾಸತ್ರಾಣಸ್ಫಟಿಕಘಟಿಕಾಪುಸ್ತಕಕರಾಮ್ ।<br>
+        ವರ-ತ್ರಾಸ-ತ್ರಾಣ-ಸ್ಫಟಿಕಘಟಿಕಾ-ಪುಸ್ತಕ-ಕರಾಮ್ ।<br>
         <span class="ENG">
             vara-traasa-traana-sphatika-ghatikaa-pustaka-karaam;<br>
         </span>
 
-        ಸಕೃನ್ನ ತ್ವಾ ನತ್ವಾ ಕಥಮಿವ ಸತಾಂ ಸಂನ್ನಿದಧತೇ<br>
+        ಸಕೃನ್ನ ತ್ವಾ ನತ್ವಾ ಕಥಮಿವ ಸತಾಂ ಸನ್ನಿದಧತೇ<br>
         <span class="ENG">
             sakrunna thwaa nathwaa kathamiva sathaam sannidadhathe<br>
         </span>
 
-        ಮಧುಕ್ಷೀರದ್ರಾಕ್ಷಾಮಧುರಿಮಧುರೀಣಾಃ ಫಣಿತಯಃ ॥ 15 ॥<br>
+        ಮಧು-ಕ್ಷೀರ-ದ್ರಾಕ್ಷಾ-ಮಧುರಿಮ-ಧುರೀಣಾಃ ಫಣಿತಯಃ ॥ 15 ॥<br>
         <span class="ENG">
             madhu-ksheer-e-draakhsaa-madhurima-dhurinaah phanitayah.<br>
         </span>
@@ -59,7 +59,7 @@
     <p>
         ಕವೀಂದ್ರಾಣಾಂ ಚೇತಃಕಮಲವನಬಾಲಾತಪರುಚಿಂ<br>
         <span class="ENG">
-            kaveendraanaam chethah-kamalavana-baalaa-thapa-ruchim<br>
+            kaveendraanaam chethah:-kamalavana-baalaa-thapa-ruchim<br>
         </span>
 
         ಭಜಂತೇ ಯೇ ಸಂತಃ ಕತಿಚಿದರುಣಾಮೇವ ಭವತೀಮ್ ।<br>
@@ -67,12 +67,12 @@
             bhajanthe ye santhah kathichidarunaameva bhavatheeem<br>
         </span>
 
-        ವಿರಿಂಚಿಪ್ರೇಯಸ್ಯಾಃತರುಣತರಶೃಂಗಾರಲಹರೀ-<br>
+        ವಿರಿಂಚಿ-ಪ್ರೇಯಸ್ಯಾ-ಸ್ತರುಣತರ-ಶೃಂಗಾರ-ಲಹರೀ-<br>
         <span class="ENG">
-            virinchi-preyasyaah-taruna-tara-shrungaara-laharee<br>
+            virinchi-preyasyaas-taruna-tara-shrungaara-laharee<br>
         </span>
 
-        ಗಭೀರಾಭಿರ್ವಾಗ್ಭಿಃವಿದಧತಿ ಸತಾಂ ರಂಜನಮಮೀ ॥ 16 ॥<br>
+        ಗಭೀರಾಭಿ-ರ್ವಾಗ್ಭಿಃವಿದಧತಿ ಸತಾಂ ರಂಜನಮಮೀ ॥ 16 ॥<br>
         <span class="ENG">
             gabheerabhir-vaagbhir-vidadhathi sathaam ranjanamamee 16<br>
         </span>
@@ -80,7 +80,7 @@
 
     <h3>17 → 8 ವಾಗ್ದೇವತ <span class="ENG">(8 goddesses of speech)</span></h3>
     <p>
-        ಸವಿತ್ರೀಭಿರ್ವಾಚಾಂ ಶಶಿಮಣಿ ಶಿಲಾ-ಭಂಗ ರುಚಿಭಿಃ<br>
+        ಸವಿತ್ರೀಭಿ-ರ್ವಾಚಾಂ ಶಶಿಮಣಿ ಶಿಲಾ-ಭಂಗ ರುಚಿಭಿಃ<br>
         <span class="ENG">
             savithree-bhir-vaachaam shashimani shilaa-bhanga ruchibhihi<br>
         </span>
@@ -97,7 +97,7 @@
 
         ವಚೋಭಿ-ರ್ವಾಗ್ದೇವೀ ವದನ-ಕಮಲಾಮೋದ ಮಧುರೈಃ ॥ 17 ॥<br>
         <span class="ENG">
-            vachoobhir-vaagdevee vadana-kamalaamodha madhuraihi<br>
+            vachoobhir-vaagdevee vadana-kamalaamodha madhuraihi:<br>
         </span>
     </p>
 
