--- a/general/kuladevata-prarthana.html
+++ b/general/kuladevata-prarthana.html
@@ -9,9 +9,9 @@
         six-eyed, three-faced, formidable, equally radiant as dark rain cloud <br>
     </span>
 
-    <b>ಉಧರ-ಸಿಜ್ವಲ-ನಾಂ</b> ನೀಲಘಾತ್ರಂ <b>ಷಟ್ಬಾಹು</b> ಶೋಭಿತಂ <br>
+    <b>ಉಧರಸಿ-ಜ್ವಲನಾಂ</b> ನೀಲಘಾತ್ರಂ <b>ಷಟ್ಬಾಹು</b> ಶೋಭಿತಂ <br>
     <span class="ENG">
-        udhara-sijvela-naam neelaghaatram shat-baahu shobhitam <br>
+        udharasi-jwalanaam neelaghaatram shat-baahu shobhitam <br>
         fiery & powerful (like blazing fire), dark-blue bodied and adorned with six-arms <br>
     </span>
 
