--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
                     <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
+                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram</a> </li>
                     <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
                             Stotram</a> </li>
                 </ol>
@@ -83,6 +84,7 @@
                 <h2>Uncategorised</h2>
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
+                    <li> <a href="stotram/argala-stotram.html">Argalaa Stotram</a> </li>
                     <li> <a href="puja/veerabhadra-puja.html">Veerabhadraswamy Puja (TBD)</a> </li>
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
