--- a/stotram/argala-stotram.html
+++ b/stotram/argala-stotram.html
@@ -33,22 +33,22 @@
     <img id="image" src="../images/argala-stotram.png" alt="Goddess Durga" style="max-width: 300px; display: block; margin: 16px 0;">
 
     <p>
-        ಪತ್ನೀಂ ಮನೋರಮಾಂ ದೇಹಿ ಮನೋವೃತ್ತಾನುಸಾರಿಣೀಮ್ |<br>
-        ತಾರಿಣೀಂ ದುರ್ಗಸಂಸಾರಸಾಗರಸ್ಯ ಕುಲೋದ್ಭವಾಮ್ ||
+        ಪತ್ನೀಂ ಮನೋರಮಾಂ ದೇಹಿ ಮನೋವೃತ್ತಾನುಸಾರಿಣೀಂ | <br>
+        ತಾರಿಣೀಂ ದುರ್ಗಸಂಸಾರ-ಸಾಗರಸ್ಯ ಕುಲೋದ್ಭವಾಂ ||
     </p>
 
     <p>
-        Patnīṁ manoramāṁ dēhi manōvṛttānusāriṇīm |<br>
+        Patnīṁ manoramāṁ dēhi manōvṛttānusāriṇīm | <br>
         Tāriṇīṁ durgasaṁsārasāgarasya kulōdbhavām ||
     </p>
 
     <p>
-        பத்னீம் மனோரமாம் தேஹி மனோவ்ருத்தானுசாரிணீம் |<br>
+        பத்னீம் மனோரமாம் தேஹி மனோவ்ருத்தானுசாரிணீம் | <br>
         தாரிணீம் துர்கஸம்ஸாரசாகரஸ்ய குலோத்பவாம் ||
     </p>
 
     <p>
-        पत्नीं मनोरमां देहि मनोवृत्तानुसारिणीम् |<br>
+        पत्नीं मनोरमां देहि मनोवृत्तानुसारिणीम् | <br>
         तारिणींदुर्गसंसारसागरस्य कुलोद्भवाम् ||
     </p>
 
