--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ol>
                     <li><a href="puja/venkateswara-puja.html">Venkateswara Puja</a></li>
                     <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
+                    <li><a href="stotram/garuda-gamana-stotram.html">Garuda Gamana Stotram</a></li>
                 </ol>
             </div>
 
